# wasm-rust-demo2

./: .gitignore  Cargo.toml  README.md  index.js  justfile  package-lock.json  package.json  rust-toolchain  webpack.config.js
src/: lib.rs
