[package]
name = "wasm-rust-demo"
version = "0.0.1"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.69"
web-sys = { version = "0.3", features = ["console","css","Document","Element","HtmlElement","Window"] }

[profile.release]
lto = true
