[package]
name = "wasm-rust-demo"
version = "0.0.1"
authors = ["The wasm-bindgen Developers"]
edition = "2018"
description = "Rust Wasm demo"
repository = "git@github.com:linux-china/wasm-rust-demo.git"
license = "git@github.com:linux-china/wasm-rust-demo.git"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.78"
web-sys = { version = "0.3", features = ["console", "css", "Document", "Element", "HtmlElement", "Window"] }
js-sys = { version = "0.3" }

[profile.release]
lto = true
opt-level = "s"
